chore: 迁移开发插件并整理项目文档